fix: stack title and status badge vertically on mobile order detail

--- a/src/styles/orderdetail.module.scss
+++ b/src/styles/orderdetail.module.scss
@@ -745,4 +745,9 @@
   .type_info_grid {
     grid-template-columns: 1fr;
   }
+
+  .header_top {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
